 - Fix for bug 22099: Special handling for "transaction roll-back error" and responding with try-again error code APP-0108
 - Fix for bug 22491: Dropped annoying System.out.println() invocations
 - Fix for bug 22487: Re-initialize SessionPOP3StorageUIDLMap if timer elapsed in the meantime

* 2012-07-06 - thorben.betten@open-xchange.com

 - Fix for bug 22489: Dealing with failed auto-save

* 2012-07-05 - thorben.betten@open-xchange.com

 - Fix for bug 22473: Fixed own rights for INBOX folder

* 2012-07-04 - thorben.betten@open-xchange.com

 - Fix for bug 17693: Responding with a "try-again" error code if "json_0" multipart part is missing

* 2012-07-03 - thorben.betten@open-xchange.com

 - Fix for bug 22454: Chunk-wise IMAP searches
 - Fix for bug 22351: More lenient handling for less FETCH responses than expected
 - Partly fix for bug 22093: Dealing with non-selectable folders during action=all request
 - Fix for 22093: Dealing with non-selectable folders during folder listing

* 2012-07-02 - tobias.friedrich@open-xchange.com

- Fix for bug 22451: Demystified until parameter in recurrence rules

* 2012-07-02 - thorben.betten@open-xchange.com

 - Fix for bug 22448: Changed error message for code SES-0007

* 2012-06-30 - thorben.betten@open-xchange.com

 - Fix for bug 22428: Added missing import
 - Fix for bug 22437: Fixed possible NPE

* 2012-06-28 - tobias.friedrich@open-xchange.com

 - Fix for bug 22418: Using debug loglevel

* 2012-06-28 - thorben.betten@open-xchange.com

 - Fix for bug 22411: Restrict number of bytes allowed for an Email's header part when converting into special "x-original-headers" header

* 2012-06-26 - martin.herfurth@open-xchange.com

 - Fix for bug 22397: Adding invalid user ids to appointment participants is no longer possible.

* 2012-06-26 - thorben.betten@open-xchange.com

 - Fix for bug 22392: Fixed StackOverflowError
 - Fix for bug 22393: Fixed possible NPE
 - Fix for bug 22264: Replace possible "<br>" tags with LF